map-frontend/src/app/filter-menu/filter-menu.component.css
mat-expansion-panel  {
  background-color: rgba(255, 255, 255, 0.8);
  margin-bottom: 4px;
  width: 300px;
  opacity: 100% !important;
}

.mat-icon {
  font-size: 17px;
  position:absolute;
	right:10px;
}

.mat-side{
  font-size: 30px;
  position: relative !important;
  transition: all 0.5s;
  cursor: pointer;
  
  font-size: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.mat-side-rot{
  transform: rotate(180deg) !important;
}

.mat-expansion-panel-body {
  transition: all 0.5s;
  padding: 0px 24px 0px !important;
}

.mat-icon:hover {
  color: RoyalBlue;
}

.menu-name{
  width: 80%;
}

.menu-header {
  background-color: rgba(214, 214, 214, 0.26);
  width: 117%; 
  margin-left: -25px; 
  cursor: pointer;
  border-bottom: 0.5px solid rgba(214, 214, 214, 0.363);
  margin-bottom: -1px;
}

.menu-header:hover {
  background-color: rgba(168, 177, 189, 0.212);
}

.selected-menu-header {
  background: rgba(55, 60, 79, 0.35) !important; 
  width: 117%; 
  margin-left: -25px;
}

.menu-body {
  padding-bottom: 20px;
}

.menu-text {
  color: black !important;
}

.menu-text-position {
  margin-left: -25px;
}

.tag-list {
  margin-bottom: 0px; 
  margin-top: 12px; 
  cursor: pointer;

  /* display flex */
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;

  align-items: center;
}

.tag-name {
  display: inline;
  margin-left: 23px;
  margin-right: 20px;
  letter-spacing: 0.3px;
  word-spacing: 2px;
  color:rgb(0, 0, 0);
}

.tag-name-disabled {
  color:gray;
}

#tag-color-icon {
  width: 13px;
  height: 13px;
  margin-bottom: 3px;
  position: absolute;
  border-radius: 100% 100% 0;
  transform: rotate(45deg);
  border: 1px solid #FFFFFF;
}

#kml-color-icon {
  width: 13px;
  height: 2px;
  margin-bottom: 3px;
  position: absolute;
  border: 1px solid #FFFFFF;
}

#tag-color-icon:hover {
  width:14px;
  height: 14px;
}

.white-circle {
  height: 5px;
  width: 5px;
  background-color: white;
  border-radius: 50%;
  display: flex;
  margin-left: 25%;
  margin-top: 25%;
}

.eye {
  margin-top: 3px;
}
.eye-off {
  width: 19px;
  height: 19px;
  margin-left: -1px;
  fill: currentColor;
  overflow: hidden;
}

.scrollbar-box {
  position: absolute;
  z-index: 400;
  top: 15px;
  left: 15px;
  max-height: calc(100% - 70px);
  width: 312px;
  scrollbar-color: rgba(148, 143, 0, 0) rgba(255, 255, 255, 0);
  float: left;
  overflow-y: scroll;
  overflow-x: hidden;
  transition: all 0.3s ease;
}

@media (max-width: 500px) {
  .scrollbar-box {
    width: 280px;
  }

  mat-expansion-panel  {
    width: 285px;
  }
}


.has-tabs{
  top: 75px;
  max-height: calc(100% - 100px);
  padding-bottom: 10px;
}

.scrollbar-box:hover {
  scrollbar-color: rgb(161, 161, 156) rgba(255, 255, 255, 0);
}

/* For Google Chrome */
.scrollbar-box-chrome::-webkit-scrollbar-thumb {
  background: transparent;
  border: 0px solid transparent;
  border-radius: 100px;
}

.scrollbar-box-chrome:hover::-webkit-scrollbar-thumb {
  background: rgb(161, 161, 156);
}

.scrollbar-box-chrome::-webkit-scrollbar-thumb:hover {
  background: rgb(119, 119, 118);
}

.menu-button-container{
  display: flex;
  align-items: center; 
  justify-content: space-evenly;
  /* height: 100%; */
}

.menu-button {
  display: flex;
  align-items: center;
}

.letter-overlay {
  position: absolute;
  top: 60%;
  left: 60%;
  transform: translate(-50%, -50%);
  color: rgb(100, 100, 100);
  font-size: 15px;
}



.letter-overlay:hover {
  color: RoyalBlue;
}


#menu-button-lock-all{
  font-size: 22px;
  padding-left: 2px;
}

#menu-button-open-all{
  font-size: 22px;
}

#menu-button-expand{
  font-size: 40px;
}

.pinned-header {
  position: relative;
  background-image: 
    url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30'><text x='0' y='20' font-size='20' fill='white'>★</text></svg>"),

    linear-gradient(135deg, rgba(100, 100, 100, 0.4) 0%, rgba(100, 100, 100, 0.4) 25%, transparent 25%, transparent 100%);
  
  background-repeat: no-repeat;
  background-position: 0.5rem center, 0 0;
  background-size: 30px 30px, 60px 100%;
}

